--- a/front-end/src/assets/styles/allUsers.css
+++ b/front-end/src/assets/styles/allUsers.css
@@ -87,3 +87,11 @@ body {
     text-align: center;
   }
   
+  #card {	
+    background-color: #abd2d3;	
+    border-radius: 5px;	
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);	
+    margin: 0 auto;	
+    max-width: 500px;	
+    padding: 20px;	
+  }
