--- a/front-end/src/assets/styles/userupdate.css
+++ b/front-end/src/assets/styles/userupdate.css
@@ -34,4 +34,20 @@
     box-shadow: 0 0 0 0.125em rgba(66, 153, 225, 0.25);
     outline: none;
   }
+  .car{
+    padding-left: 200px;
+    z-index: 1;
+  }
+
+  .but {
+    /* display: block;
+    margin: 0 auto;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer; */
+    padding-left: 400px;
+  }
   
