--- a/front-end/src/assets/styles/basicInnovationInformation.css
+++ b/front-end/src/assets/styles/basicInnovationInformation.css
@@ -24,6 +24,15 @@ body {
   margin-top: 50px;
 }
 
+.main-sections-headings {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 36px;
+  color: #333333;
+  text-align: left;
+  margin-top: 50px;
+}
+
 .main-section {
   /* width: 100%; */
   max-width: auto;
@@ -59,7 +68,13 @@ body {
   background-color: #f0f0f0;
   color: #333;
   padding: 10px;
-  width: 500px;
+  /* width: 500px; */
+}
+
+.tooltipDescriptions {
+  background-color: #f0f0f0;
+  color: #333;
+  padding: 10px;
 }
 
 .hide {
@@ -74,4 +89,31 @@ body {
 .invalid {
   color: red;
   margin-left: 0.25rem;
+}
+
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.offscreen {
+  position: absolute;
+  left: -9999px;
+}
+
+table,
+th,
+td {
+  width: auto;
+}
+th,
+td {
+  padding: 7px;
+}
+
+.CPA-section {
+  margin-left: 35px;
 }
