--- a/front-end/src/assets/styles/signup.css
+++ b/front-end/src/assets/styles/signup.css
@@ -1,6 +1,6 @@
 #card {	
     /* background-color: #abd2d3;	 */
-    background-color: rgb(299, 231, 235);
+    background-color: #E5E7EB;
     border-radius: 5px;	
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);	
     margin: 0 auto;	
@@ -70,7 +70,7 @@
   
   body {
     /* background-color: #EDF2F7; */
-    background-color: #E5E7EB;
+    background-color: rgb(226 232 240);
     padding: 20px;
   }
   
