--- a/front-end/src/assets/styles/allUsers.css
+++ b/front-end/src/assets/styles/allUsers.css
@@ -1,55 +1,55 @@
 
 
 /* Set font family and font size */
-body {
+/* body {
     font-family: sans-serif;
     font-size: 16px;
-  }
+  } */
   
   /* Style the container */
-  .container {
+  .cont123ainer {
     background-color:rgb(299, 231, 235) ;
     max-width: 960px;
     margin: 0 auto;
   }
   
   /* Style the table */
-  table {
+  .table {
     border-collapse: collapse;
     width: 100%;
   }
   
   /* Style the table header */
-  thead {
+  .thead {
     background-color: #fff;
     border-bottom: 1px solid #ddd;
   }
   
   /* Style the table header cells */
-  th {
+  .th {
     padding: 1rem;
     text-align: left;
   }
   
   /* Style the table body */
-  tbody tr {
+  .tbody tr {
     transition: background-color 0.3s ease-in-out;
   }
   
   /* Style the table body rows */
-  td {
+  .td {
     padding: 1rem;
     border-bottom: 1px solid #ddd;
   }
   
   /* Style the hover effect */
-  tbody tr:hover {
-    /* background-color: #f1f1f1; */
+    .tbody tr:hover {
+    background-color: #f1f1f1;
     background-color: rgb(299, 231, 235);
   }
   
   /* Style the buttons */
-  button {
+  .button {
     display: inline-block;
     padding: 0.5rem 1rem;
     border-radius: 9999px;
@@ -60,21 +60,21 @@ body {
   }
   
   /* Style the primary button */
-  button.primary {
+  .button.primary {
     color: #fff;
     background-color: #000;
     border: 2px solid #000;
   }
   
   /* Style the secondary button */
-  button.secondary {
+  .button.secondary {
     color: #000;
     background-color: #fff;
     border: 2px solid #000;
   }
   
   /* Style the link */
-  a {
+  .a {
     color: #000;
     text-decoration: none;
     transition: opacity 0.3s ease-in-out;
@@ -85,13 +85,13 @@ body {
     opacity: 0.5;
   }
 
-  h1 {
+  .h1 {
     font-size: 24px;
     margin-bottom: 30px;
     text-align: center;
   }
   
-  .card {	
+  .csaard {	
     padding-left: 200px;
      z-index: 1;
      background-color: #E5E7EB;
@@ -105,4 +105,7 @@ body {
     margin: 0 auto;	
     max-width: 500px;	
     padding: 20px;	 */
+  }
+  body{
+    background-color: #E5E7EB;
   }
