--- a/front-end/src/assets/styles/signup.css
+++ b/front-end/src/assets/styles/signup.css
@@ -8,17 +8,17 @@
     padding: 20px;	
   }
   
-  h2 {
+  .h2 {
     font-size: 24px;
     margin-bottom: 20px;
     text-align: center;
   }
   
-  form div {
+  /* .form div {
     margin-bottom: 20px;
-  }
+  } */
   
-  label {
+  .label {
     display: block;
     font-size: 16px;
     margin-bottom: 5px;
@@ -72,5 +72,8 @@
     
     background-color: rgb(226 232 240);
     padding: 20px;
+    padding-top: 20px;
   }
-  
+  .cardpad{
+    padding-top: 40px;
+  }
