--- a/front-end/src/assets/styles/allUsers.css
+++ b/front-end/src/assets/styles/allUsers.css
@@ -11,6 +11,8 @@
     background-color:rgb(299, 231, 235) ;
     max-width: 960px;
     margin: 0 auto;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);	
+    width: 800px;
   }
   
   /* Style the table */
