--- a/front-end/src/assets/styles/signup.css
+++ b/front-end/src/assets/styles/signup.css
@@ -1,8 +1,9 @@
 #card {	
     
     background-color: #E5E7EB;
+    border-color: #a2a8ad;
     border-radius: 5px;	
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);	
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);	
     margin: 0 auto;	
     max-width: 500px;	
     padding: 20px;	
@@ -73,7 +74,12 @@
     background-color: rgb(226 232 240);
     padding: 20px;
     padding-top: 20px;
+    
   }
   .cardpad{
     padding-top: 40px;
+    padding-bottom: 40px;
+    border-color: #a2a8ad;
+    border-radius: 5px;	
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);	
   }
