--- a/front-end/src/assets/styles/basicInnovationInformation.css
+++ b/front-end/src/assets/styles/basicInnovationInformation.css
@@ -12,7 +12,49 @@ html {
 
 body {
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #f8f9fa;
+}
+.next-button {
+  background-color: #ffdb58;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.image-preview-container {
+  width: 300px;
+  height: 300px;
+  border: 1px solid #ccc;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.image-preview {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.upload-overlay {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.upload-overlay span {
+  color: #fff;
+  font-weight: bold;
 }
 
 .main-heading {
