--- a/front-end/src/assets/styles/innovationoverview.css
+++ b/front-end/src/assets/styles/innovationoverview.css
@@ -1,20 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-family: "Montserrat", sans-serif;
-  font-size: 15px;
-  color: #000000;
-}
-
-body {
-  min-height: 100vh;
-  background-color: #f5f5f5;
-}
-
 .main-section {
   max-width: auto;
   min-height: auto;
@@ -26,7 +9,7 @@ body {
   border-radius: 0.9rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
-li {
+.main-section li {
   list-style: none;
   margin-bottom: 8px;
   border-bottom: 1px solid #ccc;
