--- a/front-end/src/assets/styles/innovationCard.css
+++ b/front-end/src/assets/styles/innovationCard.css
@@ -1,4 +1,4 @@
-.card {
+.card-vault {
   display: flex;
   width: 80%;
   height: 200px;
@@ -10,7 +10,7 @@
   overflow: hidden;
 }
 
-.container {
+.container-inventor {
   display: flex;
   flex-direction: column;
   align-items: center;
